# sd-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
.githooks/: README.md  (+1 more)
sd-agent/: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
sd-agent/migrations/: env.py
sd-agent/migrations/versions/: 20260723_0001_sd_app_baseline.py  20260723_0002_file_object.py  20260724_0003_outbox_replay_approval.py  (+2 more)
sd-agent/sd_agent/: __init__.py  api_main.py  config.py  errors.py  logging_config.py  request_context.py  runtime.py  worker_main.py
sd-agent/tests/: test_ai_persistence.py  test_ai_pipeline.py  test_ai_review_job.py  test_ai_schemas.py  test_api_baseline.py  test_auth_api.py  test_auth_security.py  test_auth_service.py  test_config.py  test_domain_adapters.py  test_file_adapters.py  test_file_service.py  test_files_api.py  test_home_api.py  test_migration.py  test_models.py  test_oa_adapter.py  test_oa_service.py  test_oa_urge_service.py  test_outbox_admin_api.py  test_outbox_admin_persistence.py  test_outbox_admin_service.py  test_outbox_persistence.py  test_outbox_service.py  test_outbox_worker.py  test_reconciliation_adapters.py  test_reconciliation_job.py  test_report_api.py  test_rules.py  test_runtime_scheduler.py  test_scheduler_admin_api.py  test_scheduler_admin_handler.py  test_scheduler_admin_persistence.py  test_scheduler_admin_service.py  test_scheduler_catalog.py  test_scheduler_persistence.py  test_scheduler_service.py  test_scheduler_worker.py  test_sso_api.py  test_sso_persistence.py  (+7 more)
(+114 files in other folders)
