[project]
name = "sd-agent"
version = "0.1.0"
description = "集团重点工作督导平台 BFF 与 worker"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.16,<2",
  "apscheduler>=3.11,<4",
  "asyncpg>=0.30,<1",
  "fastapi==0.139.2",
  "httpx>=0.28,<1",
  "orjson>=3.10,<4",
  "pydantic==2.13.4",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=6,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=6,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sd_agent"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=sd_agent --cov-branch --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["sd_agent"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jwt.*"]
ignore_missing_imports = true
